SDKs/apideck.com/pos/8.85.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    opts := []sdk.SDKOption{
        sdk.WithSecurity(
            shared.Security{
                APIKey: shared.SchemeAPIKey{
                    APIKey: "YOUR_API_KEY_HERE",
                },
            }
        ),
    }

    s := sdk.New(opts...)
    
    req := operations.ItemsAddRequest{
        Security: operations.ItemsAddSecurity{
            APIKey: shared.SchemeAPIKey{
                APIKey: "YOUR_API_KEY_HERE",
            },
        },
        QueryParams: operations.ItemsAddQueryParams{
            Raw: false,
        },
        Headers: operations.ItemsAddHeaders{
            XApideckAppID: "voluptas",
            XApideckConsumerID: "dolorem",
            XApideckServiceID: "placeat",
        },
        Request: shared.ItemInput{
            Abbreviation: "aut",
            AbsentAtLocationIds: []string{
                "saepe",
            },
            Available: true,
            AvailableForPickup: true,
            AvailableOnline: true,
            Categories: []interface{}{
                "iusto",
            },
            Code: "quo",
            Cost: 96.199997,
            Deleted: false,
            Description: "enim",
            Hidden: true,
            ID: "nam",
            IdempotencyKey: "placeat",
            ModifierGroups: []interface{}{
                "eum",
                "qui",
            },
            Name: "et",
            Options: []interface{}{
                "ab",
                "in",
            },
            PresentAtAllLocations: false,
            PriceAmount: 70.099998,
            PriceCurrency: "AZN",
            PricingType: "per_unit",
            ProductType: "other",
            Sku: "aperiam",
            TaxIds: []string{
                "non",
                "tenetur",
                "quia",
            },
            Variations: []interface{}{
                "iste",
                "fuga",
            },
        },
    }
    
    res, err := s.Items.ItemsAdd(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.CreateItemResponse != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Items

* `ItemsAdd` - Create Item
* `ItemsAll` - List Items
* `ItemsDelete` - Delete Item
* `ItemsOne` - Get Item
* `ItemsUpdate` - Update Item

### Locations

* `LocationsAdd` - Create Location
* `LocationsAll` - List Locations
* `LocationsDelete` - Delete Location
* `LocationsOne` - Get Location
* `LocationsUpdate` - Update Location

### Merchants

* `MerchantsAdd` - Create Merchant
* `MerchantsAll` - List Merchants
* `MerchantsDelete` - Delete Merchant
* `MerchantsOne` - Get Merchant
* `MerchantsUpdate` - Update Merchant

### Modifier Groups

* `ModifierGroupsAdd` - Create Modifier Group
* `ModifierGroupsAll` - List Modifier Groups
* `ModifierGroupsDelete` - Delete Modifier Group
* `ModifierGroupsOne` - Get Modifier Group
* `ModifierGroupsUpdate` - Update Modifier Group

### Modifiers

* `ModifiersAdd` - Create Modifier
* `ModifiersAll` - List Modifiers
* `ModifiersDelete` - Delete Modifier
* `ModifiersOne` - Get Modifier
* `ModifiersUpdate` - Update Modifier

### Order Types

* `OrderTypesAdd` - Create Order Type
* `OrderTypesAll` - List Order Types
* `OrderTypesDelete` - Delete Order Type
* `OrderTypesOne` - Get Order Type
* `OrderTypesUpdate` - Update Order Type

### Orders

* `OrdersAdd` - Create Order
* `OrdersAll` - List Orders
* `OrdersDelete` - Delete Order
* `OrdersOne` - Get Order
* `OrdersPay` - Pay Order
* `OrdersUpdate` - Update Order

### Payments

* `PaymentsAdd` - Create Payment
* `PaymentsAll` - List Payments
* `PaymentsDelete` - Delete Payment
* `PaymentsOne` - Get Payment
* `PaymentsUpdate` - Update Payment

### Tenders

* `TendersAdd` - Create Tender
* `TendersAll` - List Tenders
* `TendersDelete` - Delete Tender
* `TendersOne` - Get Tender
* `TendersUpdate` - Update Tender

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
